--- a/Resources/views/Language/list.html.twig
+++ b/Resources/views/Language/list.html.twig
@@ -1,4 +1,4 @@
-{% extends "TenoloAdminBundle:Form:list.html.twig" %}
+{% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
 
 {% block buttons %}
     {{ parent() }}
