--- a/Resources/views/Translation/list.html.twig
+++ b/Resources/views/Translation/list.html.twig
@@ -1,4 +1,4 @@
-{% extends "TenoloAdminBundle:Form:list.html.twig" %}
+{% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
 
 {% block tableheader %}
     <th>{{ knp_pagination_sortable(objects, 'Wert', 'p.translation') }}</th>
