--- a/Resources/views/Language/add.html.twig
+++ b/Resources/views/Language/add.html.twig
@@ -1,4 +1,4 @@
-{% extends "TenoloAdminBundle:Form:add.html.twig" %}
+{% extends "TenoloAdminControlPanelBundle:Form:add.html.twig" %}
 
 {% block formcontent %}
     {{ macros.formgroup(form.basic) }}
