html template clean up

--- a/Resources/views/Domain/add.html.twig
+++ b/Resources/views/Domain/add.html.twig
@@ -1,5 +1,5 @@
 {% extends "TenoloAdminControlPanelBundle:Form:add.html.twig" %}
 
-{% block formcontent %}
+{% block formContent %}
     {{ macros.formgroup(form.basic) }}
 {% endblock %}
