--- a/Resources/views/Token/add.html.twig
+++ b/Resources/views/Token/add.html.twig
@@ -1,6 +1,6 @@
 {% extends "TenoloAdminControlPanelBundle:Form:add.html.twig" %}
 
-{% block formcontent %}
+{% block formContent %}
     {{ macros.formgroup(form.basic) }}
     {{ macros.formgroup(form.domainWrapper) }}
 {% endblock %}
