--- a/Resources/views/Language/list.html.twig
+++ b/Resources/views/Language/list.html.twig
@@ -1,7 +1,8 @@
 {% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
 
-{% block buttons %}
+{% block listTopNavigationButtons %}
     {{ parent() }}
+
     {% if route is defined %}
         <a href="{{ path(route.clearCache) }}" class="btn btn-danger">{{ fa('trash-o') }} {{ 'translation.cache.clear'|trans }}</a>
     {% endif %}
