--- a/Resources/views/Domain/list.html.twig
+++ b/Resources/views/Domain/list.html.twig
@@ -1,1 +1,8 @@
+{#
+ # @package Domain
+ # @author Nikita Loges
+ # @company tenolo GbR
+ #}
+
+{# template extend #}
 {% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
