--- a/Resources/views/Language/list.html.twig
+++ b/Resources/views/Language/list.html.twig
@@ -1,5 +1,13 @@
+{#
+ # @package Language
+ # @author Nikita Loges
+ # @company tenolo GbR
+ #}
+
+{# template extend #}
 {% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
 
+{# {@inheritdoc} #}
 {% block listTopNavigationButtons %}
     {{ parent() }}
 
