--- a/Resources/views/Token/add.html.twig
+++ b/Resources/views/Token/add.html.twig
@@ -1,5 +1,13 @@
+{#
+ # @package Token
+ # @author Nikita Loges
+ # @company tenolo GbR
+ #}
+
+{# template extend #}
 {% extends "TenoloAdminControlPanelBundle:Form:add.html.twig" %}
 
+{# {@inheritdoc} #}
 {% block formContent %}
     {{ macros.formgroup(form.basic) }}
     {{ macros.formgroup(form.domainWrapper) }}
