--- a/Resources/views/Translation/list.html.twig
+++ b/Resources/views/Translation/list.html.twig
@@ -1,13 +1,22 @@
+{#
+ # @package Translation
+ # @author Nikita Loges
+ # @company tenolo GbR
+ #}
+
+{# template extend #}
 {% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
 
+{# {@inheritdoc} #}
 {% block tableRowHeader %}
-    <th>{{ knp_pagination_sortable(objects, 'Wert', 'p.translation') }}</th>
-    <th>{{ knp_pagination_sortable(objects, 'Token', 'p.token') }}</th>
-    <th>{{ knp_pagination_sortable(objects, 'Sprache', 'p.language') }}</th>
+    {{ table.header(knp_pagination_sortable(objects, 'Wert', 'p.translation')) }}
+    {{ table.header(knp_pagination_sortable(objects, 'Token', 'p.token')) }}
+    {{ table.header(knp_pagination_sortable(objects, 'Sprache', 'p.language')) }}
 {% endblock %}
 
+{# {@inheritdoc} #}
 {% block tableRowContent %}
-    <td><a href="{{ path(route.edit, { "id": o.id }) }}">{{ o.translation }}</a></td>
-    <td>{{ o.token.name }}</td>
-    <td>{{ o.language.name }}</td>
+    {{ table.rowcolumn('<a href="' ~ path(route.edit, { "id": o.id }) ~ '">' ~ o.translation ~ '</a>') }}
+    {{ table.rowcolumn(o.token.name) }}
+    {{ table.rowcolumn(o.language.name) }}
 {% endblock %}
