--- a/Resources/views/Domain/list.html.twig
+++ b/Resources/views/Domain/list.html.twig
@@ -5,4 +5,4 @@
  #}
 
 {# template extend #}
-{% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
+{% extends "TenoloAdminControlPanelBundle:List/Table:table.html.twig" %}
