--- a/Resources/views/Language/list.html.twig
+++ b/Resources/views/Language/list.html.twig
@@ -5,7 +5,7 @@
  #}
 
 {# template extend #}
-{% extends "TenoloAdminControlPanelBundle:Form:list.html.twig" %}
+{% extends "TenoloAdminControlPanelBundle:List/Table:table.html.twig" %}
 
 {# {@inheritdoc} #}
 {% block listTopNavigationButtons %}
