--- a/Resources/views/Layout/navbar-top-left.html.twig
+++ b/Resources/views/Layout/navbar-top-left.html.twig
@@ -1,4 +1,4 @@
-<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ 'translation.language.object.plural'|trans({}, 'entities') }} {{ fa('caret-down') }}</a>
+<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ fa('flag', true) }} {{ 'translation.language.object.plural'|trans({}, 'entities') }} {{ fa('caret-down') }}</a>
     <ul class="dropdown-menu">
         <li class="dropdown-header">{{ 'translation.language.object.plural'|trans({}, 'entities') }}</li>
         <li><a href="{{ path('acp.translation.language.list') }}">{{ fa('bars', true) }} {{ 'translation.language.object.plural'|trans({}, 'entities') }} {{ 'action.list'|trans }}</a></li>
