--- a/src/Resources/views/Translation/list.html.twig
+++ b/src/Resources/views/Translation/list.html.twig
@@ -9,14 +9,14 @@
 
 {# @inheritdoc #}
 {% block tableRowHeader %}
-    {{ table.header(knp_pagination_sortable(objects, 'Wert', 'p.translation')) }}
-    {{ table.header(knp_pagination_sortable(objects, 'Token', 'p.token')) }}
-    {{ table.header(knp_pagination_sortable(objects, 'Sprache', 'p.language')) }}
+    <th>{{ knp_pagination_sortable(objects, 'Wert', 'p.translation') }}</th>
+    <th>{{ knp_pagination_sortable(objects, 'Token', 'p.token') }}</th>
+    <th>{{ knp_pagination_sortable(objects, 'Sprache', 'p.language') }}</th>
 {% endblock %}
 
 {# @inheritdoc #}
 {% block itemContent %}
-    {{ table.rowcolumn('<a href="' ~ path(route.edit, { "id": o.id }) ~ '">' ~ o.translation ~ '</a>') }}
-    {{ table.rowcolumn(o.token.name) }}
-    {{ table.rowcolumn(o.language.name) }}
+    <td><a href="{{ path(route.edit, { "id": o.id }) ~ }}">{{ o.translation }}</a></td>
+    <td>{{ o.token.name }}</td>
+    <td>{{ o.language.name }}</td>
 {% endblock %}
