--- a/src/Resources/views/Token/add.html.twig
+++ b/src/Resources/views/Token/add.html.twig
@@ -5,7 +5,7 @@
  #}
 
 {# template extend #}
-{% extends "TenoloAdminControlPanelBundle:Form:add.html.twig" %}
+{% extends "TenoloCRUDAdminBundle:CRUD:addedit.html.twig" %}
 
 {# @inheritdoc #}
 {% block formContent %}
