--- a/src/Resources/views/Token/list.html.twig
+++ b/src/Resources/views/Token/list.html.twig
@@ -5,4 +5,4 @@
  #}
 
 {# template extend #}
-{% extends "TenoloAdminControlPanelBundle:List/Table:table.html.twig" %}
+{% extends "TenoloCRUDAdminBundle:CRUD:list.html.twig" %}
