--- a/src/Resources/views/Translation/list.html.twig
+++ b/src/Resources/views/Translation/list.html.twig
@@ -7,14 +7,14 @@
 {# template extend #}
 {% extends "TenoloAdminControlPanelBundle:List/Table:table.html.twig" %}
 
-{# {@inheritdoc} #}
+{# @inheritdoc #}
 {% block tableRowHeader %}
     {{ table.header(knp_pagination_sortable(objects, 'Wert', 'p.translation')) }}
     {{ table.header(knp_pagination_sortable(objects, 'Token', 'p.token')) }}
     {{ table.header(knp_pagination_sortable(objects, 'Sprache', 'p.language')) }}
 {% endblock %}
 
-{# {@inheritdoc} #}
+{# @inheritdoc #}
 {% block itemContent %}
     {{ table.rowcolumn('<a href="' ~ path(route.edit, { "id": o.id }) ~ '">' ~ o.translation ~ '</a>') }}
     {{ table.rowcolumn(o.token.name) }}
